Update JsonConfig.java