@@ -22,7 +22,7 @@ public class JsonConfig {
     private final LinkedHashMap<String, JsonElement> configMap = new LinkedHashMap<>();
     private static final JsonParser PARSER = new JsonParser();
 
-    public static final Path CONFIG_DIR = Path.of(System.getProperty("user.dir")).resolve("config");
+    public static final Path CONFIG_DIR = Paths.get(System.getProperty("user.dir")).resolve("config");
 
     private JsonConfig(@NotNull Path configPath, String version) {
         this.configPath = configPath;
